[gd_scene load_steps=6 format=3 uid="uid://bwpgxy8tjs0s4"]

[ext_resource type="Script" uid="uid://ojv3yi0k2bhg" path="res://Props/Characters/player_character.gd" id="1_xfbci"]
[ext_resource type="AudioStream" uid="uid://r556kjb1d6h8" path="res://Audio/SoundEffects/GameClick.wav" id="2_1x2nc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_w0hdg"]
radius = 0.4
height = 1.7

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0yfon"]
radius = 0.45
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y57i1"]
radius = 0.45
height = 0.9

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 61
floor_snap_length = 0.0
platform_on_leave = 2
platform_floor_layers = 4294967291
safe_margin = 0.01
script = ExtResource("1_xfbci")

[node name="Mesh" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_w0hdg")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0yfon")

[node name="HalfCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.450753, 0)
shape = SubResource("CapsuleShape3D_y57i1")
disabled = true

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)

[node name="MainRayCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -1.7)
collision_mask = 48
collide_with_areas = true

[node name="Camera3D" type="Camera3D" parent="Head"]
cull_mask = 1048573

[node name="DropPosMarker" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.939669, -0.517726)

[node name="GrabPosMarker" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.69417)

[node name="VaultCheckRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -0.8)
collision_mask = 17

[node name="VaultRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
target_position = Vector3(0, 0, -0.8)
collision_mask = 17

[node name="CrouchRayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0.9, 0)
collision_mask = 17

[node name="StairsBottomRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.78978, -0.310834)
target_position = Vector3(0, 0, -0.4)
collision_mask = 16

[node name="StairsTopRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.366043, -0.4168)
target_position = Vector3(0, 0, -0.4)
collision_mask = 16

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_1x2nc")
